--- a/src/app/styles/themes/normal.css
+++ b/src/app/styles/themes/normal.css
@@ -1,9 +1,9 @@
 .app.light {
-    --bg-color: #f2f5f5;
-    --inverted-bg-color: #4f4f4f;
-    --sidebar-bg-color: #353634;
-    --primary-color: #ffc6a5;
-    --secondary-color: #85c9ff;
-    --inverted-primary-color: #353634;
-    --inverted-secondary-color: #1cff1c;
+    --bg-color: #f2f2f5;
+    --inverted-bg-color: #505050;
+    --sidebar-bg-color: #3d3d3d;
+    --primary-color: #ffd7c7;
+    --secondary-color: #89cfff;
+    --inverted-primary-color: #595959;
+    --inverted-secondary-color: #32cd32;
 }
