--- a/src/shared/ui/Loader/ui/Loader.css
+++ b/src/shared/ui/Loader/ui/Loader.css
@@ -1,10 +1,3 @@
-.page-loader {
-  min-height: calc(100vh - var(--navbar-height));
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
 
 .lds-facebook {
   display: inline-block;
@@ -34,7 +27,7 @@
 
 .lds-facebook div:nth-child(3) {
   left: 56px;
-  animation-delay: 0;
+  animation-delay: 0s;
 }
 
 @keyframes lds-facebook {
