--- a/src/shared/ui/Button/Button.module.css
+++ b/src/shared/ui/Button/Button.module.css
@@ -1,7 +1,3 @@
-.Button {
-    @apply duration-color-transition-global bg-red-500;
+.test {
+    @apply bg-green-400;
 }
-
-/* .clear {
-    @apply p-0 border-none bg-none outline-none
-} */
